--- a/interior.css
+++ b/interior.css
@@ -45,7 +45,7 @@
 }
 img {
     width: 100%;
-    height:350px;
+    height:400px;
     object-fit: cover;
 }
 .neeka {
@@ -422,7 +422,10 @@ li {
             font-size: 1.8rem;
         }
     
+        nav li {
+            padding: 7px !important;
         }
+}
 
 
 @media (min-width: 756px) {
